start displaying in the templates

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -1,5 +1,8 @@
-{% extends 'base.html'%}
-
+{% extends "index.html" %}
 {% block content %}
-<p>{{about_us}}</p>
-{% endblock%}
+<div class="container">
+    <h1>About Page</h1>
+    <p>A great way to solidify your knowledge is to teach it to other people. There is no better way to express your ideas and opinions than with a personal blog.</p>
+</div>
+   
+{% endblock content %}
