--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,89 +1,22 @@
 {% extends 'base.html'%}
-
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
+
+  <meta charset="UTF-8">
+  {% if title %}
+  <title>{{title}}</title>
+  {% else %}
+  <title>This is my Blog Post</title>
+  {% endif %}
+
 
 </head>
 
 <body>
-    {% block styles %}
-    {{ super() }}
-    <link rel="stylesheet" href="{{url_for('static',filename='css/styles.css')}}">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    {% endblock %}
-    {% block navbar%}
-    {{super()}}
-    {% endblock %}
-    {% block content %}
-    <div class="body">
-        <div class="container-fluid">
-            <h2 class=" font-bold">Blogs</h2>
-            <div class="row">
-                <div class="col-md-6">
-                    <hr>
-                    <article class="media content-section" style="border-bottom: solid black ;">
-                        {% if user.profile_pic_path %}
-                        <img src="{{url_for('static',filename=user.profile_pic_path)}}" alt=""
-                            class="img-fluid img-thumbnail">
-                        {%else%}
-                        <img src="{{url_for('static',filename='logo-removebg-preview.png')}}" alt="..."
-                            class="img-thumbnail">
+ 
 
-                        {% if current_user.is_authenticated %}
-                        <p>No profile picture to display</p>
-                        <a href="{{url_for('main.profile',uname=current_user.username)}}">Add a profile photo</a>
-                        {%else%}
-                        <p><a href="{{url_for('auth.login')}}">Add a profile photo</a></p>
-                        {%endif%}
-                        {% endif %}
-                    </article>
-                    <article class="media content-section">
-                        {% for blogs in blogs %}
-                        <img class="rounded-circle article-img" src="" alt="">
-                        <div class="media-body">
-                            <div class="article-metadata">
-                                <button><a href="{{ url_for('.new_post', post_id=post.id) }}">Add a New
-                                        Blog</a></button>
-                                <h2>Pitch Category: <a class="mr-2"
-                                        href="{{ url_for('.category_post', category=post.category) }}">{{
-                                        blogs.category }}</a></h2>
-                            </div>
-                            <h4><a class="article-title">Title: {{ blogs.title }}</a></h4>
-                            <p class="article-content">{{ blogs.content | truncate(100) }}</p>
-                            <p>Posted by: <a class="mr-2"
-                                    href="{{ url_for('.user_posts', username=post.author.username) }}">{{
-                                    blogs.author.username
-                                    }}</a></p>
-                            <p>On:<small class="text-muted mr-2">{{ blogs.posted.strftime('%Y-%m-%d') }}</small></p>
-                        </div>
-                        <p class="article-footer"><a class="ratings"
-                                href="{{ url_for('.new_comment', post_id=post.id) }}">
-                                Comment on this blog</a></p>
-                        <br>
-                    </article>
-                    <button type="submit" class="btn btn-success">
-                        <a href="{{ url_for('.like_action', post_id=post.id, action='like') }}">Like</a>
-                    </button>
-                    <button type="submit" class="btn btn-danger">
-                        <a href="{{ url_for('.like_action', post_id=post.id, action='unlike') }}">Unlike</a>
-                    </button>
-                    <button class="btn btn-info">
-                        <span>{{ blogs.likes.count() }} likes</span>
-                    </button>
-                    <hr>
-                    {% endfor %}
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="col-md-6">
-        {% for quotes in quotes %}
-        <p>{{quotes.id}}</p>
-        <p>{{quotes.author}}</p>
-        <p>{{quotes.quote}}</p>
-        {% endfor %}
-
-    </div>
-    {% endblock %}
 </body>
+
+</html>
