--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -9,7 +9,7 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li><a class="nav-item nav-link" href="/">Home</a></li>
-                <li><a class="nav-item nav-link" href="/about">MyBlogPost</a></li>
+                <li><a class="nav-item nav-link" href="/about">About MyBlogPost</a></li>
                 {% if current_user.is_authenticated %}
                 <li><a class="nav-item nav-link" href="/">View Blogs</a></li>
                 {% else %}
@@ -18,16 +18,17 @@
             </ul>
 
             <ul class="nav navbar-nav navbar-right">
-                    {% if current_user.is_authenticated %}
-                    <li><a href="{{url_for('main.profile',uname=current_user.username)}}">Profile</a></li>
-                    <li>You are signed in as {{current_user.username}}</li>
-                    <li><a href="{{url_for('auth.logout')}}">Logout</a></li>
-                    {% else %}
-                    <li><a href="{{url_for('auth.login')}}">Sign in</a></li>
-                    {%endif%}
+                {% if current_user.is_authenticated %}
+               <li> <a class="nav-item nav-link" href="{{ url_for('main.new_post')}}">New Post</a></li>
+  
+                <li><a class="nav-item nav-link" href="{{ url_for('main.account')}}">Account</a></li>
+              <li><a class="nav-item nav-link" href="{{ url_for('.logout')}}">Logout</a></li>
+              {% else %}
+              <li><a class="nav-item nav-link" href="{{url_for('auth.login')}}"">Login</a></li>
+              <li><a class="nav-item nav-link" href="{{ url_for('auth.register')}}">Register</a></li>
+               {% endif%}
             </ul>
         </div>
 
     </div>
 </div>
-
