--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -9,17 +9,19 @@
                 <li><button type="menu"><a href="/about">About</a></button></li><br>
                 {% if current_user.is_authenticated %}
                 <li><button type="menu"><a href="/">My Profile</a></button></li><br>
-                <li><button type="menu"><a href="/">Update Profile</a></button></li><br>
-                <li><button type="menu"><a href="/">Write a Blog</a></button></li>
+                <li><button type="menu"><a class="nav-item nav-link" href="/">Update Profile</a></button></li><br>
+                <li><button type="menu"> <a class="nav-item nav-link" href="{{ url_for('main.new_post')}}">Write a new Blog</a></button></li>
+                </li>
                 {% else %}
                 <li><a class="nav-item nav-link" href="{{url_for('auth.login')}}">Login</a></li>
-                {%endif%}
+                {% endif %}
             </ul>
         </div>
         <div class='col-sm-5'>
+            {% for post in posts %}
             <article class="media content-section">
-                {% for post in posts %}
-                <h3>Blog Posts from users</h3>
+                <img class="rounded_circle article-img"
+                    src="{{ url_for('static',filename='css/photos/' + post.author.image_file)}}" alt="No image">
                 <div class="media-body">
                     <div class="article-metadata">
                         <a class="mr-2" href="#">{{ post.author.username}}</a>
@@ -28,8 +30,9 @@
                     <h2><a class="article-title" href="{{url_for('.post',post_id=post.id)}}">{{post.title}}</a></h2>
                     <p class="article-content">{{ post.content }}</p>
                 </div>
-                {% endfor %}
+                <a class="nav-item nav-link" href="{{ url_for('main.update_post', post_id = post.id)}}">Update Blog</a>
             </article>
+            {% endfor %}
         </div>
         <div class='col-sm-5'>
             <div class="media content-section">
@@ -46,4 +49,4 @@
 
 
 
-{% endblock content%}
+{% endblock %}
