--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,7 +15,17 @@
 </head>
 
 <body>
- 
+  <div class="container-fluid">
+    {% if current_user.is_authenticated %}
+    <a class="article-article" href="{{ url_for('.new_post')}}">New Post</a>
+    <a class="article-article" href="{{ url_for('.account')}}">Account</a>
+    <a class="article-article" href="{{ url_for('.logout')}}">Logout</a>
+    {% else %}
+    <a class="article-article" href="{{ url_for('.login')}}">Login</a>
+    <a class="article-article" href="{{ url_for('.register')}}">Register</a>
+    {% endif%}
+
+  </div>
 
 </body>
 
