--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -49,11 +49,15 @@
                         <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
                         <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
                         </svg></button></a>
+                        <p><a class="article-title" href="{{url_for('.post',post_id=post.id)}}">View Comments</a></p>
                 </div>
                 <a class="nav-item nav-link" href="{{ url_for('main.update_post', post_id = post.id)}}">Update Blog</a><br>
-                <a class="nav-item nav-link" href="{{ url_for('main.new_comment')}}">Add a Comment</a>
+                <p class="article-footer"><a class="ratings" href="{{ url_for('.new_comment', post_id=post.id) }}">
+                    Comment on this blog</a></p>
+                    
             </article>
             {% endfor %}
+
         </div>
         <div class='col-sm-5'>
             <div class="media content-section">
