--- a/app/templates/post.html
+++ b/app/templates/post.html
@@ -20,6 +20,13 @@
     </div>
     <h2 class="article-title">{{post.title}}</h2>
     <p class="article-content">{{ post.content }}</p>
+    <ul>
+      {%for comment in comments %}
+      <li>
+        {{comment.comment}}
+      </li>
+      {%endfor %}
+    </ul>
 
 </div>
 </article>
