style the about-page

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -2,7 +2,15 @@
 {% block content %}
 <div class="container">
     <h1>About Page</h1>
-    <p>A great way to solidify your knowledge is to teach it to other people. There is no better way to express your ideas and opinions than with a personal blog.</p>
+    <p>A great way to solidify your knowledge is to teach it to other people. <br> <br> 
+        There is no better way to express your ideas and opinions <br> <br> 
+        than with a personal blog.</p>
+        <h4>Businesses and Enterprises</h4>
+    <p>A blog with useful content shows your audience and customers that you <br> <br> 
+        are a trusted source. Writing posts about topics they will find <br> <br> 
+        interesting and helpful shows them that you are more than just a business<br> <br> 
+         selling a service or product; it shows them that you care about<br> <br> 
+          spreading useful information in your industry.</p>
 </div>
    
 {% endblock content %}
