style the comment form

--- a/app/templates/new_comment.html
+++ b/app/templates/new_comment.html
@@ -3,6 +3,6 @@
 
 {% block content %}
 <div class="container">
-  {{wtf.quick_form(form)}}
+ <center>{{wtf.quick_form(form)}}</center> 
 </div>
 {% endblock %}
