--- a/app/templates/create_post.html
+++ b/app/templates/create_post.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
+<div class='container'>
 <div class="content-section">
     <form method="POST" action="">
         {{ form.hidden_tag() }}
@@ -37,5 +38,5 @@
         </div>
     </form>
 </div>
-   
+</div>
 {% endblock content %}
