--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -16,5 +16,12 @@
 {% block content %}
 {% include 'index.html' %}
 {% endblock %}
+{%block styles %}
+  {{super()}}
+  <!--Importing the simple mde css and js files  -->
+  {{ simplemde.css}}
+  {{ simplemde.js }}
+
+{% endblock %}
 </body>
 </html>
