--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -18,17 +18,17 @@
             <p><a href="{{url_for('auth.login')}}">Add a profile photo</a></p></article>
             {%endif%}
             {% endif %}
-            <h3>Quick Links</h3>
-            <ul>
-                <li><button type="menu"><a href="/">Home</a></button></li><br>
-                <li><button type="menu"><a href="/about">About</a></button></li><br>
+            <h3 style="border-bottom: solid black ;">Quick Links</h3>
+            <ul style='list-style-type: none'>
+                <li><button type="menu" style='background-color: black'><a href="/" style="text-decoration: none; color:white">Home</a></button></li><br>
+                <li><button type="menu" style='background-color: black'><a href="/about" style="text-decoration: none; color:white">About</a></button></li><br>
                 {% if current_user.is_authenticated %}
-                <li><button type="menu"><a href="{{url_for('main.profile',username=current_user.username)}}">My
+                <li><button type="menu" style='background-color: black'><a href="{{url_for('main.profile',username=current_user.username)}}" style="text-decoration: none; color:white">My
                             Profile</a></button></li><br>
-                <li><button type="menu"><a class="nav-item nav-link"
-                            href="{{url_for('main.profile',username=current_user.username)}}">Update
+                <li><button type="menu" style='background-color: black'><a class="nav-item nav-link"
+                            href="{{url_for('main.profile',username=current_user.username)}}" style="text-decoration: none; color:white">Update
                             Profile</a></button></li><br>
-                <li><button type="menu"> <a class="nav-item nav-link" href="{{ url_for('main.new_post')}}">Write a new
+                <li><button type="menu" style='background-color: black'> <a class="nav-item nav-link" href="{{ url_for('main.new_post')}}" style="text-decoration: none; color:white">Write a new
                             Blog</a></button></li>
                 </li>
                 {% else %}
@@ -37,7 +37,7 @@
             </ul>
         </div>
         <div class='col-sm-5' style='border-right: 3px solid black'>
-            <h3>User Posts</h3>
+            <h3 style="border-bottom: solid black ;">User Posts</h3>
             {% for post in posts %}
             <article class="media content-section" style='border-bottom: solid black 3px;'>
                 <img class="rounded_circle article-img"
@@ -73,7 +73,7 @@
         <div class='col-sm-5'>
             <div class="media content-section">
                 <div class="media-body">
-                    <h3>Quotes from Random People</h3>
+                    <h3 style="border-bottom: solid black ;">Quotes from Random People</h3>
                     <p>{{quotes[1]}}</p>
                     <h6 class="mr-4">{{quotes[2]}}</h6>
                 </div>
